# SIIT2024-SOK-Grafovi-Ekstravaganza

./: .gitignore  README.md  main.py  requirements.txt  structure.txt
GraphExplorer/: db.sqlite3  manage.py
GraphExplorer/Explorer/: apps.py  models.py  urls.py  views.py
GraphExplorer/Explorer/management/commands/: ClearCommand.py  Command.py  CommandLine.py  CreateCommand.py  DeleteCommand.py  EditCommand.py  FilterCommand.py  HelpCommand.py  SaveGraphCommand.py  SearchCommand.py  cli.py
GraphExplorer/Explorer/migrations/: 0001_initial.py
GraphExplorer/Explorer/templates/: birdview.html  index.html  toolbar.html  treeview.html
GraphExplorer/Explorer/templates/crud/: vertex_create.html  vertex_edit.html
GraphExplorer/GraphExplorer/: asgi.py  settings.py  urls.py  wsgi.py
api/: pyproject.toml  setup.py
api/api/: __init__.py  api.py  datasource_api.py  graph_api.py
api/api.egg-info/: PKG-INFO  SOURCES.txt
api/api/graph_api.egg-info/: PKG-INFO  SOURCES.txt
assets/: acyclic_graph.xml  cyclic_graph.xml  large_graph.json  mediun.json
block_visualizer/: setup.py
block_visualizer/block_visualizer/: block_visualizer.py
block_visualizer/block_visualizer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
data_source_json/: setup.py
data_source_json/data_source_json/: data_source_json.py
data_source_json/data_source_json.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
graph_platform/: pyproject.toml
graph_platform/platform/: __init__.py  filters.py  graph_platform.py  plugin_registry.py  workspace.py
graph_platform/platform/TreeVIew/: tree_view.py
platform/: pyproject.toml  setup.py
platform/platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
plugins/block_visualizer/: pyproject.toml
plugins/block_visualizer/block_visualizer/: __init__.py  block_visualizer.py
plugins/block_visualizer/block_visualizer/block_visualizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
plugins/block_visualizer/block_visualizer/templates/: layout.html
plugins/data_source_json/: pyproject.toml
plugins/data_source_json/data_source_json/: __init__.py  data_source_json.py
plugins/data_source_json/data_source_json/data_source_json.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
plugins/data_source_json/src/data_source_json/: __init__.py  data_source_json.py
plugins/data_source_xml/: pyproject.toml
plugins/data_source_xml/src/data_source_xml/: data_source_xml.py
plugins/simple_visualizer/: pyproject.toml
plugins/simple_visualizer/simple_visualizer/: simple_visualizer.py
plugins/simple_visualizer/simple_visualizer/templates/: layout.html
