[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "graph-api"
version = "0.1.1"
description = "Common API interfaces for graph plugins"
authors = [
    { name = "Miloš Milić", email = "milicmilos.rs@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[tool.setuptools.packages.find]
where = ["api"]