[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "block-visualizer"
version = "0.1.0"
description = "Visualizer plugin using Django templates and D3.js"
authors = [
    { name = "Miloš Milić", email = "milicmilos.rs@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "graph-api",
    "Django>=4.0",
    "websockets",
    "asyncio",
]

[tool.setuptools.packages.find]
where = ["block_visualizer"]