[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "data-source-json"
version = "0.1.0"
description = "Data source loader from JSON"
authors = [
    { name = "Mirko Đukić", email = "example@email.com" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "graph-api",
]

[tool.setuptools.packages.find]
where = ["data_source_json"]